--- a/OnlineFetva-web/src/main/webapp/secure/template/leftMenu.xhtml
+++ b/OnlineFetva-web/src/main/webapp/secure/template/leftMenu.xhtml
@@ -9,20 +9,20 @@
         <h:form>
             <p:menu>
                 <p:submenu label="Fetva ">
-                    <p:menuitem value="Fetva Girişi"  url="/fetva/fetvaActions.jsf"  icon="ui-icon-disk" />
-                    <p:menuitem value="Fetva Listesi" url="/fetva/fetvaList.jsf" icon="ui-icon-arrowrefresh-1-w"/>
+                    <p:menuitem value="Fetva Girişi"  url="/secure/fetva/fetvaActions.jsf"  icon="ui-icon-disk" />
+                    <p:menuitem value="Fetva Listesi" url="/secure/fetva/fetvaList.jsf" icon="ui-icon-arrowrefresh-1-w"/>
                 </p:submenu>
                 <p:submenu label="Fetva Kategori Yönetimi">
-                    <p:menuitem value="Kategori İşlemleri" url="/fetvaCategory/fetvaCategoryActions.xhtml"  icon="ui-icon-close"/>
+                    <p:menuitem value="Kategori İşlemleri" url="/secure/fetvaCategory/fetvaCategoryActions.xhtml"  icon="ui-icon-close"/>
                 </p:submenu>
                 <p:submenu label="Kullanıcı Girişi">
-                    <p:menuitem value="Kullanıcı İşlemleri"  url="/user/userActions.jsf" icon="ui-icon-close"/>
+                    <p:menuitem value="Kullanıcı İşlemleri"  url="/secure/user/userActions.jsf" icon="ui-icon-close"/>
                 </p:submenu>
                 <p:submenu label="Dosya İşlemleri">
-                    <p:menuitem value="Dosya Yükleme" url="/media/mediaActions.xhtml"  icon="ui-icon-close"/>
+                    <p:menuitem value="Dosya Yükleme" url="/secure/media/mediaActions.xhtml"  icon="ui-icon-close"/>
                 </p:submenu>
                 <p:submenu label="Soru İşlemleri">
-                    <p:menuitem value="Soru Girişi" url="/question/questionInsert.xhtml"  icon="ui-icon-close"/>
+                    <p:menuitem value="Soru Girişi" url="/secure/question/questionInsert.xhtml"  icon="ui-icon-close"/>
                 </p:submenu>
             </p:menu>
         </h:form>
