Not: Çalıştırmadan önce web.xml'deki upload directory değiştirilmeli.
Çözülenler:
Görseller DB'den çekilebiliyor.
Çoklu silme ve görüntüleme fonksiyonu eklendi.

Devam eden hatalar:
ApplicationScopped'da form yenilenmiyor ve yeni kayıt eklenemiyor.
Ekleme yapabilmek için uygulamayı tekrardan Run etmek gerekiyor.

--- a/PhotoService-web/src/main/webapp/resources/css/default.css
+++ b/PhotoService-web/src/main/webapp/resources/css/default.css
@@ -100,3 +100,10 @@ a:link:hover, a:visited:hover  {
 .formInput input{
     width: 70%;
 }
+
+/* CUSTOM CSS*/
+.ui-messages-info, .ui-message-info {
+    color: #ffffff !important;
+    background-color: #1abc9c !important;
+    border-color: #bce8f1 !important;
+}
