Shiro eksik olan kullanıcı eklendi

--- a/PhotoService-web/src/main/webapp/secure/template/mainTemplate.xhtml
+++ b/PhotoService-web/src/main/webapp/secure/template/mainTemplate.xhtml
@@ -19,7 +19,7 @@
             <ui:insert name="top">
                 <div style="display: inline-block;" class="width100">
                     <div  class="width80" style="display: inline-block">
-                    Fetva Yönetim paneli
+                    Motto Photo Servis Yönetim paneli
                     </div>
                     <div  style="display: inline-block;width: 18%;text-align:  right" >
                         <p:commandButton actionListener="#{loginManagedBean.logout()}" icon="ui-icon-suitcase"  value="Çıkış"/>
