Twitter bağlantısı yapılıp, arama sonuçları çekiliyor. Çekilen sonuçlar veritabanındaki TrendImages collection'ına kaydediliyor. Media sınıfına TrendImages(OneToOne) alanı eklendi.

--- a/PhotoService-web/src/main/webapp/resources/css/default.css
+++ b/PhotoService-web/src/main/webapp/resources/css/default.css
@@ -107,3 +107,7 @@ a:link:hover, a:visited:hover  {
     background-color: #1abc9c !important;
     border-color: #bce8f1 !important;
 }
+
+.trendName, .trendURL {
+    font-size: xx-small;
+}
